Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80452

Balsam converts cameras incorrectly from uip/uia files

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.14.1, 5.15.0 Alpha
    • 5.12
    • Quick: 3D
    • None
    • 3f7c9cdbfe07be3231d1c29b005b75bb94527082 (qt/qtquick3d/5.14)

    Description

      All camera types are converted into Camera {}, which is now abstract type.

      Due to the wrong camera elements importing files to Design Studio fails: Component .qml file: error in Camera qml type, see attached picture.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tokorpip Tomi Korpipää
            tanja_remes Tanja Remes
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes