Fix balsam camera import from Qt 3D Studio

Fixes: QTBUG-80452
Change-Id: I10dc1dc6cbc38afd3a304081dbe2cf264cae8b5a
Reviewed-by: Janne Kangas <janne.kangas@qt.io>
Reviewed-by: Mahmoud Badri <mahmoud.badri@qt.io>
Reviewed-by: Inho Lee <inho.lee@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>