src/plugins/assetimporters/uip/enummaps.h
@@ -147,6 +147,7 @@ struct EnumParseMap<ModelNode::Tessellation>
     static EnumNameMap *get();
 };
 
+#if 0 // TODO: QTBUG-81016
 template <>
 struct EnumParseMap<CameraNode::ScaleMode>
 {
@@ -158,7 +159,7 @@ struct EnumParseMap<CameraNode::ScaleAnchor>
 {
     static EnumNameMap *get();
 };
-
+#endif
 template <>
 struct EnumParseMap<LightNode::LightType>
 {
