src/plugins/assetimporters/uip/uippresentation.cpp
@@ -926,6 +926,7 @@ bool parseProperty(const V &attrs, GraphObject::PropSetFlags flags, const QStrin
     return ::parseProperty<ModelNode::Tessellation>(attrs, flags, typeName, propName, Q3DS::Enum, dst, [](const QStringRef &s, ModelNode::Tessellation *v) { return EnumMap::enumFromStr(s, v); });
 }
 
+#if 0 // TODO: QTBUG-81016
 template<typename V>
 bool parseProperty(const V &attrs, GraphObject::PropSetFlags flags, const QString &typeName, const QString &propName, CameraNode::ScaleMode *dst)
 {
@@ -937,7 +938,7 @@ bool parseProperty(const V &attrs, GraphObject::PropSetFlags flags, const QStrin
 {
     return ::parseProperty<CameraNode::ScaleAnchor>(attrs, flags, typeName, propName, Q3DS::Enum, dst, [](const QStringRef &s, CameraNode::ScaleAnchor *v) { return EnumMap::enumFromStr(s, v); });
 }
-
+#endif
 template<typename V>
 bool parseProperty(const V &attrs, GraphObject::PropSetFlags flags, const QString &typeName, const QString &propName, LightNode::LightType *dst)
 {
@@ -1887,14 +1888,20 @@ void CameraNode::setProperties(const QXmlStreamAttributes &attrs, PropSetFlags f
 void CameraNode::applyPropertyChanges(const PropertyChangeList &changeList)
 {
     Node::applyPropertyChanges(changeList);
-    setProps(changeList, 0);
+    setProps(changeList, nullptr);
 }
 
 void CameraNode::writeQmlHeader(QTextStream &output, int tabLevel)
 {
-    output << QSSGQmlUtilities::insertTabs(tabLevel) << QStringLiteral("Camera {") << endl;
+    if (m_orthographic) {
+        output << QSSGQmlUtilities::insertTabs(tabLevel) << QStringLiteral("OrthographicCamera {")
+               << endl;
+    } else {
+        output << QSSGQmlUtilities::insertTabs(tabLevel) << QStringLiteral("PerspectiveCamera {")
+               << endl;
+    }
 }
-
+#if 0 // TODO: QTBUG-81016
 namespace {
 QString cameraScaleModeToString(CameraNode::ScaleMode mode)
 {
@@ -1938,18 +1945,25 @@ QString cameraScaleAnchorToString(CameraNode::ScaleAnchor anchor)
 }
 
 }
-
+#endif
 void CameraNode::writeQmlProperties(QTextStream &output, int tabLevel, bool isInRootLevel)
 {
     Q_UNUSED(isInRootLevel)
     Node::writeQmlProperties(output, tabLevel);
-    writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("orthographic"), m_orthographic ? QStringLiteral("Camera.Orthographic") : QStringLiteral("Camera.Perspective"));
     writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("clipnear"), m_clipNear);
     writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("clipfar"), m_clipFar);
-    writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("fov"), m_fov);
-    writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("fovhorizontal"), m_fovHorizontal);
+    writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("enablefrustumculling"),
+                           m_frustumCulling);
+    if (!m_orthographic) {
+        writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("fov"), m_fov);
+        writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("fovhorizontal"),
+                               m_fovHorizontal ? QStringLiteral("Camera.Horizontal")
+                                               : QStringLiteral("Camera.Vertical"));
+    }
+#if 0 // TODO: QTBUG-81016
     writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("scalemode"), cameraScaleModeToString(m_scaleMode));
     writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("scaleanchor"), cameraScaleAnchorToString(m_scaleAnchor));
+#endif
 }
 
 void CameraNode::writeQmlProperties(const PropertyChangeList &changeList, QTextStream &output, int tabLevel)
@@ -1961,21 +1975,27 @@ void CameraNode::writeQmlProperties(const PropertyChangeList &changeList, QTextS
 
     for (auto change : changeList) {
         QString targetProperty = change.nameStr();
-        if (targetProperty == QStringLiteral("orthographic")) {
-            writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("orthographic"), m_orthographic ? QStringLiteral("Camera.Orthographic") : QStringLiteral("Camera.Perspective"));
-        } else if (targetProperty == QStringLiteral("clipnear")) {
+        if (targetProperty == QStringLiteral("clipnear")) {
             writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("clipnear"), m_clipNear);
         } else if (targetProperty == QStringLiteral("clipfar")) {
             writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("clipfar"), m_clipFar);
+        } else if (targetProperty == QStringLiteral("enablefrustumculling")) {
+            writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("enablefrustumculling"),
+                                   m_frustumCulling);
         } else if (targetProperty == QStringLiteral("fov")) {
             writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("fov"), m_fov);
         } else if (targetProperty == QStringLiteral("fovhorizontal")) {
-            writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("fovhorizontal"), m_fovHorizontal);
-        } else if (targetProperty == QStringLiteral("scalemode")) {
+            writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("fovhorizontal"),
+                                   m_fovHorizontal ? QStringLiteral("Camera.Horizontal")
+                                                   : QStringLiteral("Camera.Vertical"));
+        }
+#if 0 // TODO: QTBUG-81016
+        else if (targetProperty == QStringLiteral("scalemode")) {
             writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("scalemode"), cameraScaleModeToString(m_scaleMode));
         } else if (targetProperty == QStringLiteral("scaleanchor")) {
             writeQmlPropertyHelper(output, tabLevel, type(), QStringLiteral("scaleanchor"), cameraScaleAnchorToString(m_scaleAnchor));
         }
+#endif
     }
 }
 
@@ -1989,9 +2009,12 @@ void CameraNode::setProps(const V &attrs, PropSetFlags flags)
     parseProperty(attrs, flags, typeName, QStringLiteral("fovhorizontal"), &m_fovHorizontal);
     parseProperty(attrs, flags, typeName, QStringLiteral("clipnear"), &m_clipNear);
     parseProperty(attrs, flags, typeName, QStringLiteral("clipfar"), &m_clipFar);
+    parseProperty(attrs, flags, typeName, QStringLiteral("enablefrustumculling"),
+                  &m_frustumCulling);
+#if 0 // TODO: QTBUG-81016
     parseProperty(attrs, flags, typeName, QStringLiteral("scalemode"), &m_scaleMode);
     parseProperty(attrs, flags, typeName, QStringLiteral("scaleanchor"), &m_scaleAnchor);
-
+#endif
     // Different default value.
     parseProperty(attrs, flags, typeName, QStringLiteral("name"), &m_name);
     parseProperty(attrs, flags, typeName, QStringLiteral("position"), &m_position);
